--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_792/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_830/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -2588,6 +2588,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "3f24b001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe1 = pd.read_csv('categories_cat1.csv', index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b4de67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "id": "5ff64423",
    "metadata": {
@@ -2797,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "2d7d7e4d",
    "metadata": {},
    "outputs": [
@@ -2977,7 +2995,7 @@
        "[442 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2990,7 +3008,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
+   "id": "015f631d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe2['cat 2'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "7d6ae48f",
    "metadata": {},
    "outputs": [],
@@ -3000,22 +3039,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "52b269d7",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'index' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m         lien \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.amazon.com\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m categorie\u001b[38;5;241m.\u001b[39ma\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     16\u001b[0m         listing_categories_cat3\u001b[38;5;241m.\u001b[39mappend([dataframe2[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 1\u001b[39m\u001b[38;5;124m'\u001b[39m][i],dataframe2[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 2\u001b[39m\u001b[38;5;124m'\u001b[39m][i],categor,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,lien]) \n\u001b[0;32m---> 17\u001b[0m dataframe_cat3 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(listing_categories_cat3,columns\u001b[38;5;241m=\u001b[39m \u001b[43mindex\u001b[49m)\n\u001b[1;32m     18\u001b[0m dataframe_cat3\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'index' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat 1</th>\n",
+       "      <th>cat 2</th>\n",
+       "      <th>cat 3</th>\n",
+       "      <th>cat 4</th>\n",
+       "      <th>cat 5</th>\n",
+       "      <th>cat final</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Architects, A-Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Building Types &amp; Styles</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Criticism</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Drawing &amp; Modelling</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Historic Preservation</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3259</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>Middle East</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=159976011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3260</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>Polar Regions</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=159936011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3261</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Regions</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3262</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3263</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Washington, D.C.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3264 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat 1          cat 2                    cat 3  cat 4  \\\n",
+       "0     Arts & Photography   Architecture          Architects, A-Z      0   \n",
+       "1     Arts & Photography   Architecture  Building Types & Styles      0   \n",
+       "2     Arts & Photography   Architecture                Criticism      0   \n",
+       "3     Arts & Photography   Architecture      Drawing & Modelling      0   \n",
+       "4     Arts & Photography   Architecture    Historic Preservation      0   \n",
+       "...                  ...            ...                      ...    ...   \n",
+       "3259              Travel    Middle East                   Turkey      0   \n",
+       "3260              Travel  Polar Regions                        0      0   \n",
+       "3261              Travel  United States                  Regions      0   \n",
+       "3262              Travel  United States                   States      0   \n",
+       "3263              Travel  United States         Washington, D.C.      0   \n",
+       "\n",
+       "      cat 5 cat final                                                url  \n",
+       "0         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "1         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "2         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "3         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "4         0         0  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "...     ...       ...                                                ...  \n",
+       "3259      0         0  https://www.amazon.com/s?bbn=159976011&rh=n%3A...  \n",
+       "3260      0    finale  https://www.amazon.com/s?bbn=159936011&rh=n%3A...  \n",
+       "3261      0         0  https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
+       "3262      0         0  https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
+       "3263      0         0  https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
+       "\n",
+       "[3264 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3030,7 +3238,8 @@
     "    categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
     "    # première descente des catégories simple il suffit de le la première page pas de boucle\n",
     "    if categories == [] : \n",
-    "        listing_categories_cat3.append([dataframe2['cat 1'][i],dataframe2['cat 2'][i],0,0,0,\"finale\",lien]) \n",
+    "        #on veut écrire dans le dataframe 2 , s\n",
+    "        listing_categories_cat3.append([dataframe2['cat 1'][i],dataframe2['cat 2'][i],0,0,0,\"finale\",dataframe2['url'][i]]) \n",
     "    for categorie in categories :  \n",
     "        categor = categorie.span.text.strip()\n",
     "        lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
@@ -3038,6 +3247,44 @@
     "dataframe_cat3 = pd.DataFrame(listing_categories_cat3,columns= index)\n",
     "dataframe_cat3.to_csv('categories_cat3.csv')\n",
     "dataframe_cat3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "aab25905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "<>:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "/tmp/ipykernel_830/67723475.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "  dataframe_cat3['cat final'['finale']]\n",
+      "/tmp/ipykernel_830/67723475.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "  dataframe_cat3['cat final'['finale']]\n",
+      "/tmp/ipykernel_830/67723475.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "  dataframe_cat3['cat final'['finale']]\n",
+      "/tmp/ipykernel_830/67723475.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
+      "  dataframe_cat3['cat final'['finale']]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [41]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dataframe_cat3[\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcat final\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfinale\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m]\n",
+      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe_cat3['cat final'['finale']]"
    ]
   },
   {
