--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_878/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_844/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -3235,7 +3235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "2d7d7e4d",
    "metadata": {},
    "outputs": [
@@ -3415,7 +3415,7 @@
        "[442 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3671,7 +3671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "33735fc4",
    "metadata": {},
    "outputs": [
@@ -3851,7 +3851,7 @@
        "[3264 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3859,6 +3859,29 @@
    "source": [
     "dataframe_cat3 = pd.read_csv('categories_cat3.csv', index_col = 0)\n",
     "dataframe_cat3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0cdb1272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154656011&dc&qid=1659473941&rnid=154607011&ref=lp_154607011_nr_n_3',\n",
+       " 'finale')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i=34\n",
+    "dataframe_cat3['url'][i] , dataframe_cat3['cat final'][i]"
    ]
   },
   {
@@ -4267,20 +4290,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "6bb3c022",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'lien' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# première descente des catégories simple il suffit de le la première page pas de boucle\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m categories \u001b[38;5;241m==\u001b[39m [] : \n\u001b[0;32m---> 12\u001b[0m     listing_categories_cat4\u001b[38;5;241m.\u001b[39mappend([dataframe_cat3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 1\u001b[39m\u001b[38;5;124m'\u001b[39m][i],dataframe_cat3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 2\u001b[39m\u001b[38;5;124m'\u001b[39m][i],dataframe_cat3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcat 3\u001b[39m\u001b[38;5;124m'\u001b[39m][i],\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfinale\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[43mlien\u001b[49m]) \n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m categorie \u001b[38;5;129;01min\u001b[39;00m categories :  \n\u001b[1;32m     14\u001b[0m     categor \u001b[38;5;241m=\u001b[39m categorie\u001b[38;5;241m.\u001b[39mspan\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lien' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat 1</th>\n",
+       "      <th>cat 2</th>\n",
+       "      <th>cat 3</th>\n",
+       "      <th>cat 4</th>\n",
+       "      <th>cat 5</th>\n",
+       "      <th>cat final</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Architects, A-Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>0               Architects, A-Z\n",
+       "1       Buildi...</td>\n",
+       "      <td>Religious Buildings</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157632011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>0               Architects, A-Z\n",
+       "1       Buildi...</td>\n",
+       "      <td>Specific Styles</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157632011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Criticism</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arts &amp; Photography</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Drawing &amp; Modelling</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=157630011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6031</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0               Architects, A-Z\n",
+       "1       Buildi...</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6032</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0               Architects, A-Z\n",
+       "1       Buildi...</td>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6033</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0               Architects, A-Z\n",
+       "1       Buildi...</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6034</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0               Architects, A-Z\n",
+       "1       Buildi...</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=160000011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6035</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Washington, D.C.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>finale</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=159982011&amp;rh=n%3A...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6036 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat 1          cat 2  \\\n",
+       "0     Arts & Photography   Architecture   \n",
+       "1     Arts & Photography   Architecture   \n",
+       "2     Arts & Photography   Architecture   \n",
+       "3     Arts & Photography   Architecture   \n",
+       "4     Arts & Photography   Architecture   \n",
+       "...                  ...            ...   \n",
+       "6031              Travel  United States   \n",
+       "6032              Travel  United States   \n",
+       "6033              Travel  United States   \n",
+       "6034              Travel  United States   \n",
+       "6035              Travel  United States   \n",
+       "\n",
+       "                                                  cat 3                cat 4  \\\n",
+       "0                                       Architects, A-Z                    0   \n",
+       "1     0               Architects, A-Z\n",
+       "1       Buildi...  Religious Buildings   \n",
+       "2     0               Architects, A-Z\n",
+       "1       Buildi...      Specific Styles   \n",
+       "3                                             Criticism                    0   \n",
+       "4                                   Drawing & Modelling                    0   \n",
+       "...                                                 ...                  ...   \n",
+       "6031  0               Architects, A-Z\n",
+       "1       Buildi...           Washington   \n",
+       "6032  0               Architects, A-Z\n",
+       "1       Buildi...        West Virginia   \n",
+       "6033  0               Architects, A-Z\n",
+       "1       Buildi...            Wisconsin   \n",
+       "6034  0               Architects, A-Z\n",
+       "1       Buildi...              Wyoming   \n",
+       "6035                                   Washington, D.C.                    0   \n",
+       "\n",
+       "      cat 5 cat final                                                url  \n",
+       "0         0    finale  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "1         0         0  https://www.amazon.com/s?bbn=157632011&rh=n%3A...  \n",
+       "2         0         0  https://www.amazon.com/s?bbn=157632011&rh=n%3A...  \n",
+       "3         0    finale  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "4         0    finale  https://www.amazon.com/s?bbn=157630011&rh=n%3A...  \n",
+       "...     ...       ...                                                ...  \n",
+       "6031      0         0  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "6032      0         0  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "6033      0         0  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "6034      0         0  https://www.amazon.com/s?bbn=160000011&rh=n%3A...  \n",
+       "6035      0    finale  https://www.amazon.com/s?bbn=159982011&rh=n%3A...  \n",
+       "\n",
+       "[6036 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4295,7 +4512,7 @@
     "    categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
     "    # première descente des catégories simple il suffit de le la première page pas de boucle\n",
     "    if categories == [] : \n",
-    "        listing_categories_cat4.append([dataframe_cat3['cat 1'][i],dataframe_cat3['cat 2'][i],dataframe_cat3['cat 3'][i],0,0,\"finale\",lien]) \n",
+    "        listing_categories_cat4.append([dataframe_cat3['cat 1'][i],dataframe_cat3['cat 2'][i],dataframe_cat3['cat 3'][i],0,0,\"finale\",dataframe_cat3['url'][i]]) \n",
     "    for categorie in categories :  \n",
     "        categor = categorie.span.text.strip()\n",
     "        lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
